<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:layout_gravity="bottom"
    android:fillViewport="true"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <RelativeLayout
        style="@style/AuthBackground"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        tools:context="com.teamtreehouse.ribbit.ui.LoginActivity">

        <ImageView
            android:id="@+id/backgroundImage"
            style="@style/AuthBackgroundImage"
            android:contentDescription="@string/content_desc_background" />

        <TextView
            android:id="@+id/title"
            android:paddingTop="150dp"
            style="@style/AuthTitle" />

        <TextView
            android:id="@+id/subtitle"
            style="@style/AuthTitle.AuthSubTitle" />

        <LinearLayout
            android:id="@+id/editTextLayout"
            style="@style/AuthFieldContainer" >

            <EditText
                android:id="@+id/usernameField"
                style="@style/AuthEditText"
                android:hint="@string/username_hint" >

                <requestFocus />
            </EditText>

            <EditText
                android:id="@+id/passwordField"
                style="@style/AuthEditText"
                android:hint="@string/password_hint"
                android:inputType="textPassword" />
        </LinearLayout>

        <Button
            android:id="@+id/loginButton"
            style="@style/AuthButton"
            android:text="@string/login_button_label"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/editTextLayout" />

        <TextView
            android:id="@+id/signUpText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/loginButton"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="12dp"
            android:text="@string/sign_up_text"
            android:textColor="@android:color/white" />

    </RelativeLayout>
</ScrollView>